--- a/templates/header.html
+++ b/templates/header.html
@@ -18,10 +18,10 @@
           type='text/css'>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css">
 
     <!-- Solarized color Theme for bootstrap from https://github.com/aalpern/bootstrap-solarized -->
     <link rel="stylesheet" href="static/css/bootstrap-solarized-dark.css">
@@ -52,10 +52,15 @@
         }
 
         #historyBox {
+            font-family: "Inconsolata", monospace;
             min-height: 480px;
             max-height: 480px;
             overflow: auto;
             white-space: pre-wrap;
+        }
+
+        #textBox {
+            font-family: "Inconsolata", monospace;
         }
 
     </style>
