--- a/templates/header.html
+++ b/templates/header.html
@@ -105,17 +105,16 @@
             display: flex;
             align-items: center;
             justify-content: center;
-        }
-
-        .play .connection {
             margin-right: 16px;
         }
 
-        .play .connection .green {
+        .play .prompt .connection i {
+            cursor: pointer;
+        }
+        .play .prompt .connection .green {
             color: #0cc00c;
         }
-
-        .play .connection .red {
+        .play .prompt .connection .red {
             color: #eb1f14;
         }
 
