--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
         </div>
         <div class="prompt">
             <div class="connection">
-                <i class="fa fa-circle green" title="Disconnected"></i>
+                <i class="fa fa-circle red" title="Disconnected"></i>
             </div>
             <input id="textBox" type="text" class="form-control" autocorrect="off" autocapitalize="off" autofocus
                    spellcheck="false" value=""/>
