--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,14 @@
 
 <div class="play">
     <div class="window">
-        <div id="historyBox" class="terminal">
+        <div id="terminal-box" class="terminal">
             <!-- Messages will be inserted here. -->
         </div>
         <div class="prompt">
             <div class="connection">
                 <i class="fa fa-circle red" title="Disconnected"></i>
             </div>
-            <input id="textBox" type="text" class="form-control" autocorrect="off" autocapitalize="off" autofocus
+            <input id="prompt-input" type="text" class="form-control" autocorrect="off" autocapitalize="off" autofocus
                    spellcheck="false" value=""/>
         </div>
     </div>
