--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,109 +7,10 @@
 <!-- Load logic for connecting and talking. -->
 <script src="static/js/ansi_up.min.js"></script>
 <script src="static/js/tomato.js"></script>
-
 <script>
-    jQuery(function ($) {
-        var ansi_up = new AnsiUp;
-
-        var showMessage = function (msg) {
-            var historyBox = $("#historyBox");
-            var atBottom = (historyBox.scrollTop() + 40 >= historyBox[0].scrollHeight - historyBox.height());
-            historyBox.append(msg);
-            // If we were scrolled to the bottom before this call, remain there.
-            if (atBottom) {
-                historyBox.scrollTop(historyBox[0].scrollHeight - historyBox.height())
-            }
-        };
-
-        var escapeHtml = function (text) {
-            return text
-                .replace(/&/g, "&amp;")
-                .replace(/</g, "&lt;")
-                .replace(/>/g, "&gt;")
-                .replace(/"/g, "&quot;")
-                .replace(/'/g, "&#039;");
-        };
-
-        // Check for websocket availability.
-        if (!("WebSocket" in window)) {
-            showMessage("Requires a browser with WebSockets support.");
-        } else {
-            var wsc = new Tomato.WebSocketClient();
-            var url = "{{ .websocketAddress }}";
-            var connectionIcon = $(".prompt .connection i");
-            wsc.open(url);
-            wsc.onopen = function () {
-                showMessage('<p class="text-success">Connected.</p>');
-                connectionIcon.removeClass("red").addClass("green").attr("title", "Connected");
-            };
-            wsc.onmessage = function (msg) {
-                // console.log(msg);
-                if (msg.data === "") {
-                    return;
-                }
-                // @TODO: mxp & gmcp
-                try {
-                    var resp = $.parseJSON(msg.data);
-                    if (resp.event === "text") {
-                        msg = ansi_up.ansi_to_html(resp.content);
-                        showMessage(msg);
-                    } else if (resp.event === "sessionid") {
-                        Tomato.cookie.set("sessionid", resp.content)
-                    } else if (resp.event === "ping") {
-                        console.log("ping...");
-                    } else if (resp.event === "mssp") {
-                        console.log("mssp:", resp.content);
-                    } else if (resp.event === "atcp") {
-                        console.log("atcp");
-                    } else if (resp.event === "mxp") {
-                        console.log("mxp");
-                    }
-                } catch (e) {
-                    console.log(e);
-                }
-            };
-            wsc.onclose = function () {
-                showMessage('<p class="text-danger">Disconnected.</p>');
-                connectionIcon.removeClass("green").addClass("red").attr("title", "Disconnected");
-            };
-            wsc.onerror = function () {
-                showMessage('<p class="text-danger">Error connecting.</p>');
-            };
-            wsc.onreconnect = function (interval) {
-                interval = Math.floor(interval / 1000);
-                showMessage('<p class="text-warning">Reconnecting in ' + interval + ' seconds.</p>');
-            };
-
-            connectionIcon.click(function () {
-                if ($(this).hasClass("red")) {
-                    wsc.open(url);
-                } else if ($(this).hasClass("green")) {
-                    wsc.close(1000);
-                }
-            });
-
-            $("#textBox").keyup(function (e) {
-                if (e.keyCode === 13) {
-                    if (!e.shiftKey) {
-                        var cmd = {
-                            "type": "cmd",
-                            "content": this.value + "\n"
-                        };
-                        try {
-                            showMessage(escapeHtml(cmd.content));
-                            wsc.send(JSON.stringify(cmd));
-                        } catch (exception) {
-                            showMessage('<p class="text-warning">Couldn\'t send message.</p>');
-                        }
-                        this.value = "";
-                        e.stopPropagation();
-                    }
-                }
-            });
-        }
-    });
+    Tomato.websocketUrl = "{{ .websocketUrl }}";
 </script>
+<script src="static/js/app.js"></script>
 
 </body>
 </html>
