add prompt input history
Signed-off-by: lostsnow <lostsnow@gmail.com>

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,6 +6,7 @@
 
 <!-- Load logic for connecting and talking. -->
 <script src="static/js/ansi_up.min.js"></script>
+<script src="static/js/jquery.inputHistory.min.js"></script>
 <script src="static/js/tomato.js"></script>
 <script>
     Tomato.websocketUrl = "{{ .websocketUrl }}";
